# llm-health-eval

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
data/: evaluations.json  evaluations_restructured.json  gpt_responses.json  ground_truth.json  questions.json  scores.csv
data/archive/: legacy_evaluations.json
docs/: comprehensive_summary.md  enhanced_analysis_guide.md  multi_model_template.json  research_prompt_template.txt  residency_summary.md  writeup.md  writeup_template.md
notebooks/: analysis.ipynb
results/: analysis_summary.txt  enhanced_analysis_summary.txt  enhanced_scores.csv  multi_model_summary.txt
scripts/: compare_models.py  create_visualizations.py  deep_research_prompt.py  enhanced_analysis.py  evaluate_responses.py  generate_answers.py  generate_multi_model_responses.py  get_ground_truth.py  quick_analysis.py  restructure_evaluations.py  run_enhanced_analysis.py
